structural Changes and Updates for Skills (#34)
